# vscode-clang-complete

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json
backend/: CMakeLists.txt  log.txt  out.txt  test.md  todo.md
backend/generator/protocol/: protocol.md  structures.json
backend/include/: command_handler.h  completion.h  context.h  doxygen.h  indexer.h  json_rpc.h  log.h  path.h  source_file.h  unit.h  unit_storage.h  unsaved_files.h  uri.h  utils.h
backend/include/protocol/: decoders.h  encoders.h  enums.h  lsp.h  message_handling.h  native.h  structures.h
backend/lib/clang/unix/include/clang-c/: Index.h
backend/rpc/: commands.json
backend/src/: command_handler.c  command_handler_old.c  completion.c  doxygen.c  indexer.c  json_rpc.c  log.c  logger.c  main.c  path.c  server.c  source_file.c  testing.c  unit.c  unit_storage.c  unsaved_files.c  utils.c
backend/src/protocol/: decoders.c  encoders.c  message_handling.c  uri.c
backend/test/: CMakeLists.txt  input.json  input_test.txt  test.txt
backend/test/doxygen_parser/: CMakeLists.txt  main.c
backend/test/doxygen_parser/test_files/: test1.h
backend/test/input_test/: input_tester.py
backend/test/path_tester/: CMakeLists.txt  main.c
backend/test/target_files/: test.c
src/: backend_test.ts  extension.ts  protocol_gen.ts  protocol_gen_alt.ts
